--- a/src/input.css
+++ b/src/input.css
@@ -4,6 +4,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap');
 
 @layer utilities {
+
+    *{
+        font-family: 'Inter', sans-serif;
+    }
+    
     .max-width-container{
         max-width: 1440px;
     }
