--- a/css/style.css
+++ b/css/style.css
@@ -785,7 +785,7 @@ video {
 }
 
 *{
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', sans-serif !important;
 }
 
 .max-width-container{
